testdata/corset/invalid/basic_invalid_03.lisp
;;error:2:21-25:unknown type
(defcolumns (X :i32 :odd))
